k8s/manifests-f438fa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-f438fa
  namespace: journee
  labels:
    app: journee-f438fa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-f438fa
  template:
    metadata:
      labels:
        app: journee-f438fa
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-f438fa
          image: gcr.io/my-docker-471807/journee:v5.10.0
          ports:
            - containerPort: 3000
