k8s/manifests-f438fa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-f438fa
  namespace: journee
spec:
  selector:
    app: journee-f438fa
  ports:
    - port: 80
      targetPort: 3000
